--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,14 +2,23 @@
 title: Le Wagon - Middleman
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.pixabay.com/photo/2015/12/09/01/02/colorful-abstract-background-1084082_1280.jpg');">
+    <div class="banner-content">
+      <h1>Le Wagon Bordeaux</h1>
+      <p>Learn to code with us in Bordeaux</p>
+      <a class="btn btn-primary btn-lg">Start now</a>
+    </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <% data.cities.each do |city| %>
+      <div class="col-md-4">
+        <div class="card" style="background-image: url(<%= city.picture %>);">
+          <h2><%= city.name %></h2>
+          <p><%= city.address %></p>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
