--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,11 +2,11 @@
 title: Le Wagon - Middleman
 ---
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.pixabay.com/photo/2015/12/09/01/02/colorful-abstract-background-1084082_1280.jpg');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0) 0%, rgba(0, 36, 61, 0.28) 50%), url('https://images.pexels.com/photos/574070/pexels-photo-574070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
     <div class="banner-content">
       <h1>Le Wagon Bordeaux</h1>
       <p>Learn to code with us in Bordeaux</p>
-      <a class="btn btn-primary btn-lg">Start now</a>
+      <a class="btn btn-danger btn-lg">Start now</a>
     </div>
 </div>
 
