--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,15 +2,18 @@
 title: Le Wagon - Middleman
 ---
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0) 0%, rgba(0, 36, 61, 0.28) 50%), url('https://images.pexels.com/photos/574070/pexels-photo-574070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0) 0%, rgba(0, 36, 61, 0.28) 50%), url('https://images.pexels.com/photos/416676/pexels-photo-416676.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
     <div class="banner-content">
-      <h1>Le Wagon Bordeaux</h1>
-      <p>Learn to code with us in Bordeaux</p>
-      <a class="btn btn-danger btn-lg">Start now</a>
+      <h1>Choose your next destination</h1>
+      <p>Where are you going next?</p>
+      <a class="btn btn-danger btn-lg">Book now</a>
     </div>
 </div>
 
+
+
 <div class="container">
+  <h2 class="text-center">Best cities</h2>
   <div class="row">
     <% data.cities.each do |city| %>
       <div class="col-md-4">
@@ -22,3 +25,26 @@ title: Le Wagon - Middleman
     <% end %>
   </div>
 </div>
+
+
+<div class="container" id="home-flats">
+  <h2 class="text-center">Recent flats</h2>
+  <div class="row">
+    <% data.flats.each do |owner, flat| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('https://kitt.lewagon.com/placeholder/cities/<%= flat.city_slug %>');">
+          <div class="card-category"><%= flat.city_name %></div>
+          <div class="card-description">
+            <h3><%= flat.name %></h3>
+            <p><%= flat.description %></p>
+          </div>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{owner}", class:"card-user" %>
+          <%= link_to "", "flats/#{owner}.html", class: "card-link" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+
