--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -22,3 +22,17 @@
   margin-bottom: 30px;
 }
 }
+
+.banner-show {
+  color: white;
+  text-align: center;
+  height: 300px;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+
+
+}
